# sentinelbrief

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: architecture.md  data-sources.md  demo-script.md  github-actions.md  security-notes.md
sample-data/synthetic/: data-classification-policy.md  incident-response-policy.md  patch-management-procedure.md  phishing-triage-playbook.md  vulnerability-disclosure-procedure.md
scripts/: dev.ps1  dev.sh  seed_demo.py
src/ai-service/: Dockerfile  pyproject.toml
src/ai-service/app/: __init__.py  main.py  models.py
src/ai-service/app/api/: ask.py  deps.py  documents.py  embeddings.py  health.py  search.py
src/ai-service/app/core/: __init__.py  config.py  logging.py
src/ai-service/app/documents/: __init__.py  chunking.py  parsing.py  store.py
src/ai-service/app/providers/: __init__.py  base.py  ollama.py
src/ai-service/app/rag/: __init__.py  answering.py  prompt.py  retrieval.py
src/ai-service/app/vectorstores/: __init__.py  base.py  qdrant.py
src/ai-service/tests/: test_answering.py  test_ask_api.py  test_chat_provider.py  test_chunking.py  test_config.py  test_documents_api.py  test_embeddings_api.py  test_embeddings_provider.py  test_health.py  test_parsing.py  test_prompt.py  test_providers.py  test_restricted_mode.py  test_retrieval.py  test_search_api.py  test_store.py  test_vectorstore.py
src/web-api/: .dockerignore  Dockerfile  SentinelBrief.sln
src/web-api/SentinelBrief.WebApi.Tests/: DemoPageTests.cs  GatewayEndpointTests.cs  HealthEndpointTests.cs  (+1 more)
(+8 files in other folders)
