[project]
name = "sentinelbrief-ai-service"
version = "0.1.0"
description = "SentinelBrief AI/RAG core (FastAPI). Local-only RAG over cybersecurity documents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "qdrant-client>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (e.g. Depends) as argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]
